comento ficha de contratos o proyectos

--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/home/home.component.html
@@ -7,13 +7,13 @@
     seleccionar el tipo de reporte que quiera consultar:
   </p>
 
-  <figure class="card-sm">
+  <!-- <figure class="card-sm">
     <h2 class="card-sm--h2">Ficha de contratos o proyectos</h2>
     <p class="card-sm--p">
       En está opción podrá consultar y descargar en PDF la información integrada de un contrato de obra o interventoría
       o de un proyecto con respecto al avance y gestión que se tenga del mismo en el sistema.
     </p>
-  </figure>
+  </figure> -->
   
   <figure class="card-sm">
     <h2 class="card-sm--h2">Mapa interactivo y estadísticas generales</h2>
