--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
@@ -261,6 +261,7 @@
                 formControlName="valorConsignacion"
                 keypress="if(this.value.length >= this.maxlength) return false"
                 [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center', allowNegative: false }"
+                (ngModelChange)="validar()"
               />
             </mat-form-field>
             <span
