--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/registrar-sesion-comite-tecnico/registrar-sesion-comite-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/registrar-sesion-comite-tecnico/registrar-sesion-comite-tecnico.component.html
@@ -61,7 +61,7 @@
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="{estadoAcordeon: esVerDetalle !== true}">
+              <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : estadoAcordeon">
                     Proposiciones y varios
                 </mat-panel-title>
             </mat-expansion-panel-header>
