--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
@@ -127,6 +127,8 @@
               "
             >
               RP
+              {{ rpArray[0].numeroRp }}
+              {{ rpArray[0].numeroRp.toLocaleString('fullwide', { useGrouping:false }) }}
             </label>
           </div>
           <div class="col">
