--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
@@ -93,9 +93,9 @@
             </ng-container>
             <ng-container matColumnDef="ProyectoLLaveMen">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
-              <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+              <td mat-cell *matCellDef="let element" style="padding: 0 !important;">
                 <div
-                  class="sub-item-table justify-content-center align-items-center"
+                  class="sub-item-table justify-content-center align-items-center text-center"
                   *ngFor="let el of element.listDyProyectos; let i = index"
                   [class.h-3]="el.listDyUsos.length === 1"
                   [class.h-6]="el.listDyUsos.length === 2"
@@ -128,7 +128,9 @@
                   *ngFor="let el of element.listDyProyectos; let i = index"
                 >
                   <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
-                    <div class="sub-item-table--element">${{ el2.valorUso }}</div>
+                    <div class="sub-item-table--element">
+                      ${{ el2.valorUso }}
+                    </div>
                   </div>
                 </div>
               </td>
@@ -141,7 +143,9 @@
                   *ngFor="let el of element.listDyProyectos; let i = index"
                 >
                   <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
-                    <div class="sub-item-table--element">${{ el2.saldo }}</div>
+                    <div class="sub-item-table--element">
+                      ${{ el2.saldo }}
+                    </div>
                   </div>
                 </div>
               </td>
