--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/menu-generar-disponibilidad/menu-generar-disponibilidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/menu-generar-disponibilidad/menu-generar-disponibilidad.component.html
@@ -29,16 +29,17 @@
   </div>
   <mat-accordion>
     <mat-expansion-panel class="expansion-style" *ngFor="let disponibilidad of listaDisponibilidades">
-      <mat-expansion-panel-header 
-          class="expansion-style--header" 
+      <mat-expansion-panel-header
+          class="expansion-style--header"
           *ngIf="
-                  disponibilidad.nombreEstado=='Con validación presupuestal' || 
+                  disponibilidad.nombreEstado=='Con validación presupuestal' ||
                   disponibilidad.nombreEstado=='Devuelta por coordinación financiera' ||
-                  disponibilidad.nombreEstado=='Con disponibilidad presupuestal'|| 
-                  disponibilidad.nombreEstado=='Con disponibilidad cancelada'">
-        <mat-panel-title class="expansion-style--title sin-diligenciar" 
+                  disponibilidad.nombreEstado=='Con disponibilidad presupuestal'||
+                  disponibilidad.nombreEstado=='Con disponibilidad cancelada' ||
+                  disponibilidad.nombreEstado=='Rechazada por fiduciaria'">
+        <mat-panel-title class="expansion-style--title sin-diligenciar"
           [ngClass]="{
-                      'sin-diligenciar': disponibilidad.completo=='Incompleto', 
+                      'sin-diligenciar': disponibilidad.completo=='Incompleto',
                       'completo': disponibilidad.completo=='Completo'}">
           {{disponibilidad.nombreEstado}}
         </mat-panel-title>
@@ -47,6 +48,7 @@
       <app-tabla-devuelta-por-coordinacion-financiera  [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Devuelta por coordinación financiera'"></app-tabla-devuelta-por-coordinacion-financiera>
       <app-tabla-con-disponibilidad-presupuestal [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad presupuestal'" ></app-tabla-con-disponibilidad-presupuestal>
       <app-tabla-con-disponibilidad-cancelada  [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad cancelada'"></app-tabla-con-disponibilidad-cancelada>
-    </mat-expansion-panel>    
+      <app-tabla-rechazada-fiduciaria  [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Rechazada por fiduciaria'"></app-tabla-rechazada-fiduciaria>
+    </mat-expansion-panel>
   </mat-accordion>
 </section>
