--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/votacion-solicitud/votacion-solicitud.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/votacion-solicitud/votacion-solicitud.component.scss
@@ -53,3 +53,33 @@ th.mat-header-cell {
   justify-content: space-between;
   padding-right: 0.5em;
 }
+
+.title-menu--h1 {
+  margin-bottom: 0.8em;
+}
+
+.mx-1em {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+th.mat-header-cell {
+  text-align: center;
+}
+
+.btn-guardar {
+  margin-top: 1em;
+}
+
+.w-quill {
+  width: 30em;
+  --w-quill: 30em;
+  margin: auto;
+}
+
+.radioInput {
+  width: 9em;
+  height: 3em;
+  display: flex;
+  justify-content: space-around;
+}
